pyinterp/pyinterp/pyinterp/tests/must_pass/scope/errors/misplaced_nonlocal2.py
def f():
    nonlocal x
    return x